<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <TextView
        android:id="@+id/item_text_view_id"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:hint="@string/item_text_view_id"/>

    <TextView
        android:id="@+id/item_text_view_name"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/item_text_view_id"
        android:hint="@string/item_text_view_name"/>

    <TextView
        android:id="@+id/item_text_view_surname"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/item_text_view_name"
        android:hint="@string/item_text_view_surname"/>

    <TextView
        android:id="@+id/item_text_view_age"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/item_text_view_surname"
        android:hint="@string/item_text_view_age"/>

    <ImageButton
        android:id="@+id/image_button_item_delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/item_text_view_age"
        android:background="@mipmap/ic_launcher"
        android:layout_alignParentEnd="true"/>

</RelativeLayout>
