<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="ghh0stex.persondao_php.ui.activities.MainActivity">

    <RelativeLayout
        android:id="@+id/activity_main_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/header_text_view_id"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:text="@string/item_text_view_id"/>
        <TextView
            android:id="@+id/header_text_view_name"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/header_text_view_id"
            android:text="@string/item_text_view_name"/>
        <TextView
            android:id="@+id/header_text_view_surname"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/header_text_view_name"
            android:text="@string/item_text_view_surname"/>
        <TextView
            android:id="@+id/header_text_view_age"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/header_text_view_surname"
            android:text="@string/item_text_view_age"/>

    </RelativeLayout>

    <ListView
        android:id="@+id/activity_main_list_view_persons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/activity_main_header"/>


</RelativeLayout>
